# OnlineRNN

./: CMakeLists.txt  forecaster.cpp  forecaster.h  main.h
include/: constants.h  forecaster.h
include/CustomModels/: RecurrentNNTorch.h
include/IPCWrappers/: namedPipe.h
include/Models/: TorchMLP.h  TorchRNN.h
include/MultithreadContainers/: MultithreadQueue.h  StringHolder.h  WeightHolder.h
src/: CMakeLists.txt  forecaster.cpp  main.cpp
src/CustomModels/: RecurrentNNTorch.cpp
src/IPCWrappers/: namedPipe.cpp
src/Models/: TorchMLP.cpp  TorchRNN.cpp  TorchRNN.h
src/MultithreadContainers/: StringHolder.cpp  WeightHolder.cpp
tests/: CMakeLists.txt  test_forecaster.cpp  test_forecaster.h  test_main.cpp  test_main.h
tests/Models/: testTorchRNN.cpp  testTorchRNN.h
tests/MultithreadContainers/: test_multithreadQueue.cpp  test_multithreadQueue.h
